--- a/style/index.css
+++ b/style/index.css
@@ -444,7 +444,7 @@ article.services > p {
 nav#downloadmenu {
     text-align: center;
 
-    margin: 0px 210px 0px 210px;
+    /*margin: 0px 210px 0px 210px;*/
 }
 
 nav#downloadmenu > li {
@@ -463,8 +463,10 @@ p.download {
     font-size: 1em;
     font-weight: 500;
 
-    padding-right: 25px;
-    padding-left: 25px;
+    /*padding-right: 25px;
+    padding-left: 25px;*/
+
+    margin: auto;
 
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
@@ -477,8 +479,10 @@ p.download:hover {
     font-family: 'Poppins', sans-serif;
     font-size: 1em;
 
-    padding-right: 25px;
-    padding-left: 25px;
+    /*padding-right: 25px;
+    padding-left: 25px;*/
+
+    margin: auto;
 
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
@@ -505,6 +509,8 @@ a.downloadbutton {
     padding-right: 25px;
     padding-left: 25px;
 
+    margin: auto;
+
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
 }
@@ -519,6 +525,8 @@ a.downloadbutton:hover {
 
     padding-right: 25px;
     padding-left: 25px;
+
+    margin: auto;
 
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
