--- a/style/index.css
+++ b/style/index.css
@@ -145,8 +145,8 @@ nav#languagemenu {
     text-align: right;
     /*background-image: var(--colorbackgroundmenulang);*/
 
-    /*padding-top: 10px;*/
-    /*padding-right: 10px;*/
+    padding-top: 10px;
+    padding-right: 10px;
     padding-bottom: 30px;
 }
 
