--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.4;
+    background: url(../imgs/fundo/23322.jpg) no-repeat center center/cover;
 }
 
 .container {
@@ -31,7 +32,7 @@ body {
 
 .showcase:before {
     content: '';
-    background: url(../imgs/fundo/23322.jpg) no-repeat center center/cover;
+    /*background: url(../imgs/fundo/23322.jpg) no-repeat center center/cover;*/
     position: absolute;
     top: 0;
     left: 0;
@@ -66,8 +67,39 @@ body {
     margin-top: 1rem;
     text-decoration: none;
     transition: opacity 1s ease-in;
+    text-align: center;
 }
 
 .btn:hover {
     opacity: 0.7;
+}
+
+.btnflags {
+    margin-right: 10px;
+}
+
+footer {
+    text-align: center;
+
+    /*background-image: var(--colorbackgroundfooter);*/
+
+    /*padding: 1px 0px 1px 0px;*/
+    /*margin: 20px -8px -10px -8px;*/
+}
+
+footer > p {
+    font-family: var(--fontbutton);
+    color: var(--colorbackgroundbuttonlang);
+
+    font-weight: 500;
+
+    padding-bottom: 10px;
+
+    margin-bottom: 0px;
+}
+
+nav#footermenu {
+    text-align: center;
+
+    margin-top: 25px;
 }
