--- a/style/index.css
+++ b/style/index.css
@@ -147,12 +147,18 @@ p {
 /*--------------------LANGUAGE MENU (OUT SITE)--------------------*/
 
 nav#languagemenu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 0;
+    /*
     text-align: right;
-    /*background-image: var(--colorbackgroundmenulang);*/
+    background-image: var(--colorbackgroundmenulang);
 
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 30px;
+    */
 }
 
 div.language {
